--- a/Lecture-1/demo/package.json
+++ b/Lecture-1/demo/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@breeztech/breez-sdk-liquid": "link:./lib/breez_sdk_liquid/",
     "@eslint/js": "^9.39.1",
+    "@heroicons/react": "^2.2.0",
     "@types/howler": "^2.2.12",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
